fix: spacing on flex container

--- a/frontend-bootstrap/src/sass/index.scss
+++ b/frontend-bootstrap/src/sass/index.scss
@@ -44,7 +44,7 @@ h3,
     display: flex;
     justify-content: center;
     align-items: center;
-    height: calc(100vh - 263px); // - the nav + footer which adds to 263px
+    height: calc(100vh - 160px); // - the nav + footer which adds to 263px
 }
 
 a {
